--- a/articles.html
+++ b/articles.html
@@ -51,7 +51,7 @@
 		<nav class="header__menu menu-header">
 			<ul class="menu-header__list _spollers">
 				<li class="menu-header__item item-menu">
-					<h2 class="item-menu__title">Алкоголизм</h2>
+					<div class="item-menu__title">Алкоголизм</div>
 					<span class="item-menu__icon _spoller" data-max="1023.98"></span>
 					<ul class="item-menu__list">
 						<li class="_spollers">
@@ -94,7 +94,7 @@
 				</li>
 
 				<li class="menu-header__item item-menu">
-					<h2 class="item-menu__title">Наркомания</h2>
+					<div class="item-menu__title">Наркомания</div>
 					<span class="item-menu__icon _spoller" data-max="1023.98"></span>
 					<ul class="item-menu__list">
 						<li><a href="https://www.med24.online/landing/narkolog_na_dom/" class="item-menu__link">Нарколог на дом</a></li>
@@ -117,7 +117,7 @@
 				</li>
 
 				<li class="menu-header__item item-menu">
-					<h2 class="item-menu__title"><a href="https://www.med24.online/landing/kodirovka_ot_alkogolya/">Кодирование от алкоголизма</a></h2>
+					<div class="item-menu__title"><a href="https://www.med24.online/landing/kodirovka_ot_alkogolya/">Кодирование от алкоголизма</a></div>
 					<span class="item-menu__icon _spoller data-max="1023.98""></span>
 					<ul class="item-menu__list">
 						<li><a href="https://www.med24.online/landing/kodirovanie_metodom_torpedo/" class="item-menu__link">Торпеда от алкоголизма</a></li>
@@ -138,7 +138,7 @@
 				</li>
 
 				<li class="menu-header__item item-menu">
-					<h2 class="item-menu__title"><a href="https://www.med24.online/landing/kapelnitsy/">Капельницы</a></h2>
+					<div class="item-menu__title"><a href="https://www.med24.online/landing/kapelnitsy/">Капельницы</a></div>
 					<span class="item-menu__icon _spoller data-max="1023.98""></span>
 					<ul class="item-menu__list">
 						<li><a href="https://www.med24.online/landing/medsestra_kapelniczy_na_dom/" class="item-menu__link">На дому</a></li>
@@ -159,7 +159,7 @@
 				</li>
 
 				<li class="menu-header__item item-menu">
-					<h2 class="item-menu__title"><a href="https://www.med24.online/landing/detoksikatsiya/">Детоксикация</a></h2>
+					<div class="item-menu__title"><a href="https://www.med24.online/landing/detoksikatsiya/">Детоксикация</a></div>
 					<span class="item-menu__icon _spoller data-max="1023.98""></span>
 					<ul class="item-menu__list">
 						<li><a href="https://www.med24.online/landing/detoksikacziya_ot_narkotikov/" class="item-menu__link">От наркотиков</a></li>
@@ -192,25 +192,12 @@
 				<div class="footer-menu__column">
 					<a href="#" class="footer-menu__link">
 						<span>Медицинские услуги</span>
-						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="40px" height="40px" viewBox="0 0 40 40" version="1.1">
-							<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
-									<g transform="translate(-100.000000, -300.000000)" stroke="#B20C1C" stroke-width="1.5">
-											<g transform="translate(100.000000, 300.000000)">
-													<g transform="translate(2.000000, 11.000000)">
-															<path d="M0.841591837,12.2547946 C0.389020408,12.855262 0.502897959,13.7968709 0.923877551,14.4243666 C1.34559184,15.0518624 2.00167347,15.4295286 2.64893878,15.7472942 C5.51791837,17.1534983 8.65946939,17.7861075 11.7944082,17.9935683 C14.9286122,18.201029 18.0723673,17.9950293 21.2073061,17.7890295 C23.7089388,17.624668 26.2083673,17.8102139 28.7136735,17.875228 C30.6238776,17.9241712 32.5862449,17.9643485 34.3796327,17.2411578 C34.9953061,16.9920588 35.6462449,16.5691018 35.7880408,15.8641735 C35.8982449,15.3148408 35.6638776,14.7625861 35.494898,14.2315158 C35.2032245,13.3132828 35.0981633,12.3373406 35.0224898,11.3687034 C34.820449,8.7864014 34.7778367,6.05215627 33.5391429,3.84898146 C33.3385714,3.49249959 33.092449,3.1411312 32.7442041,2.97238671 C32.2240408,2.72109621 31.5980816,2.94828035 31.1646122,3.35370542 C30.7318776,3.7591305 30.4438776,4.31430717 30.133102,4.83880303 C29.8230612,5.3625684 29.4623265,5.88487277 28.9517143,6.15807813 C28.4058367,6.45027638 27.7541633,6.41740408 27.1766939,6.21286531 C26.5999592,6.00832653 26.0805306,5.6467312 25.5691837,5.28805784 C24.9836327,4.87898029 24.3988163,4.46917224 23.8132653,4.06009469 C22.9940816,3.48665563 22.9051837,2.20609679 22.390898,1.29955172 C22.2439592,1.04022577 22.0845306,0.768481399 21.8354694,0.635531195 C21.349102,0.374744257 20.7907347,0.746566531 20.3565306,1.10085691 C19.5322041,1.77510437 18.7064082,2.44716035 17.8798776,3.11848583 C14.3584898,5.97764571 10.6945714,8.87844385 6.43408163,9.97345679 C5.26959184,10.27296 4.0382449,10.3956833 2.85538776,10.5907256 C2.42191837,10.6623142 1.97963265,10.7368247 1.59097959,10.9596259 C1.20159184,11.1816966 0.884938776,11.774859 0.841591837,12.2547946 L0.841591837,12.2547946 Z"/>
-															<path d="M1.11269388,12.2057053 C4.0984898,13.4877252 8.69620408,14.9253405 11.989102,14.7996953 C14.2335918,14.7134968 16.4832245,14.5096885 18.6880408,14.0436323 C22.1624082,13.3087537 25.5082041,12.7988678 28.9642041,12.9478889 C31.2806939,13.0479668 33.0138367,13.1575411 35.0415918,13.4935691"/>
-															<path d="M26.1974939,12.7762224 C28.0459837,11.0171889 30.4594531,9.8052967 32.9155347,9.64239617 C33.2329224,9.6212118 34.3165959,9.59564445 34.6347184,9.61682883"/>
-															<path d="M19.9469388,4.93084548 C19.9469388,5.62262484 20.4729796,6.18291499 21.122449,6.18291499"/>
-													</g>
-											</g>
-									</g>
-							</g>
-						</svg>
+						<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40"><defs><style>.cls-1{fill:#db091c;}</style></defs><g id="Ikoner_-_outlinet" data-name="Ikoner - outlinet"><path class="cls-1" d="M34.5,13H28V11.5A2.5,2.5,0,0,0,25.5,9h-11A2.5,2.5,0,0,0,12,11.5V13H5.5A1.5,1.5,0,0,0,4,14.5v19A1.5,1.5,0,0,0,5.5,35h29A1.5,1.5,0,0,0,36,33.5v-19A1.5,1.5,0,0,0,34.5,13ZM13,11.5A1.5,1.5,0,0,1,14.5,10h11A1.5,1.5,0,0,1,27,11.5V13H13Zm22,22a.5.5,0,0,1-.5.5H5.5a.5.5,0,0,1-.5-.5v-19a.5.5,0,0,1,.5-.5h29a.5.5,0,0,1,.5.5ZM25.63,21.63H22.38V18.38a.5.5,0,0,0-.5-.5H18.13a.5.5,0,0,0-.5.5v3.25H14.38a.5.5,0,0,0-.5.5v3.75a.5.5,0,0,0,.5.5h3.25v3.25a.5.5,0,0,0,.5.5h3.75a.51.51,0,0,0,.5-.5V26.38h3.25a.51.51,0,0,0,.5-.5V22.13A.5.5,0,0,0,25.63,21.63Zm-.5,3.75H21.88a.5.5,0,0,0-.5.5v3.25H18.63V25.88a.5.5,0,0,0-.5-.5H14.88V22.63h3.25a.51.51,0,0,0,.5-.5V18.88h2.75v3.25a.5.5,0,0,0,.5.5h3.25Z"/></g></svg>
 					</a>
 				</div>
 				<div class="footer-menu__column">
 					<a href="#" class="footer-menu__link">
-						<span>Медицинское руководство</span>
+						<span>Медицинский справочник</span>
 						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="40px" height="40px" viewBox="0 0 40 40" version="1.1">
 							<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 									<g transform="translate(-100.000000, -400.000000)">
@@ -228,30 +215,7 @@
 					</a>
 				</div>
 				<div class="footer-menu__column">
-					<a href="#" class="footer-menu__link">
-						<span>Данные пациента</span>
-						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
-							<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-									<g transform="translate(-490.000000, -365.000000)">
-											<g transform="translate(490.000000, 365.000000)">
-													<g transform="translate(1.000000, 1.000000)">
-															<g transform="translate(0.000000, 16.076923)"/>
-															<g transform="translate(8.066355, 0.000000)"/>
-															<polygon stroke="#B20C1C" stroke-width="1.5" points="0 21.7621667 5 21.7621667 5 16.7621667 0 16.7621667"/>
-															<polygon stroke="#B20C1C" stroke-width="1.5" points="0 13.3810833 5 13.3810833 5 8.38108333 0 8.38108333"/>
-															<polygon stroke="#B20C1C" stroke-width="1.5" points="0 5 5 5 5 0 0 0"/>
-															<polygon stroke="#B20C1C" stroke-width="1.5" points="8.19452089 21.7621667 13.1945209 21.7621667 13.1945209 16.7621667 8.19452089 16.7621667"/>
-															<polygon stroke="#B20C1C" stroke-width="1.5" points="8.19452089 13.3810833 13.1945209 13.3810833 13.1945209 8.38108333 8.19452089 8.38108333"/>
-															<polygon stroke="#B20C1C" stroke-width="1.5" points="8.19452089 5 13.1945209 5 13.1945209 0 8.19452089 0"/>
-															<polygon stroke="#B20C1C" stroke-width="1.5" points="16.3890418 21.7621667 21.3890418 21.7621667 21.3890418 16.7621667 16.3890418 16.7621667"/>
-															<polygon stroke="#B20C1C" stroke-width="1.5" points="16.3890418 13.3810833 21.3890418 13.3810833 21.3890418 8.38108333 16.3890418 8.38108333"/>
-															<polygon stroke="#B20C1C" stroke-width="1.5" points="16.3890418 5 21.3890418 5 21.3890418 0 16.3890418 0"/>
-													</g>
-											</g>
-									</g>
-							</g>
-						</svg>
-					</a>
+					<a href="#" class="footer-menu__link"></a>
 				</div>
 			</div>
 		</nav>
@@ -476,7 +440,7 @@
             <img data-src="img/logo.svg" src="" alt="">
           </a>
           <div class="footer__block-text">
-            <p class="footer__text">2014-2021, ООО «Семейный доктор» ОГРН 1153668014390</p>
+            <p class="footer__text">© 2015-2021, ООО «Семейный доктор» <a href="https://www.rusprofile.ru/id/7535774">ОГРН 1153668014390</a></p>
             <p class="footer__text">Свидетельство о регистрации в СМИ <a href="https://rkn.gov.ru/mass-communications/reestr/media/?id=841051&page=">серия Эл №С77-79982</a> от 25.12.2020 г.</p>
             <p class="footer__text">Используя сайт, вы соглашаетесь на обработку персональных данных. Если вы не согласны, следует покинуть сайт.</p>
           </div>
@@ -498,7 +462,6 @@
         </div>
       </div>
     </div>
-    <div class="footer__copyright">© 2011-2021, ООО «Семейный доктор»</div>
   </div>
 </footer>
 		</div>
