--- a/services.html
+++ b/services.html
@@ -23,7 +23,7 @@
 			</div>
 
 			<a href="#" class="header__search">
-				<svg width="100%" height="100%" viewBox="0 0 14 15" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+				<svg width="100%" height="100%" viewBox="0 0 14 15" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
 					<g transform="matrix(1,0,0,1,-2966,-3470)">
 						<g transform="matrix(1.43778,0,0,2.19305,-3006.16,3416.63)">
 							<g transform="matrix(0.435176,0,0,0.285304,2938.7,-0.171424)">
@@ -136,7 +136,7 @@
 
 						<li class="menu-header__item item-menu">
 							<div class="item-menu__title"><a href="https://www.med24.online/landing/kodirovka_ot_alkogolya/">Кодирование от алкоголизма</a></div>
-							<span class="item-menu__icon _spoller data-max="1023.98""></span>
+							<span class="item-menu__icon _spoller" data-max="1023.98"></span>
 							<ul class="item-menu__list">
 								<li><a href="https://www.med24.online/landing/kodirovanie_metodom_torpedo/" class="item-menu__link">Торпеда от алкоголизма</a></li>
 								<li><a href="https://www.med24.online/landing/kodirovanie_po_metodu_dovzhenko/" class="item-menu__link">Кодирование по методу Довженко</a></li>
@@ -157,7 +157,7 @@
 
 						<li class="menu-header__item item-menu">
 							<div class="item-menu__title"><a href="https://www.med24.online/landing/kapelnitsy/">Капельницы</a></div>
-							<span class="item-menu__icon _spoller data-max="1023.98""></span>
+							<span class="item-menu__icon _spoller" data-max="1023.98"></span>
 							<ul class="item-menu__list">
 								<li><a href="https://www.med24.online/landing/medsestra_kapelniczy_na_dom/" class="item-menu__link">На дому</a></li>
 								<li class="_spollers">
@@ -178,7 +178,7 @@
 
 						<li class="menu-header__item item-menu">
 							<div class="item-menu__title"><a href="https://www.med24.online/landing/detoksikatsiya/">Детоксикация</a></div>
-							<span class="item-menu__icon _spoller data-max="1023.98""></span>
+							<span class="item-menu__icon _spoller" data-max="1023.98"></span>
 							<ul class="item-menu__list">
 								<li><a href="https://www.med24.online/landing/detoksikacziya_ot_narkotikov/" class="item-menu__link">От наркотиков</a></li>
 								<li><a href="https://www.med24.online/landing/ubod/" class="item-menu__link">УБОД</a></li>
@@ -261,14 +261,14 @@
         <!--breadcrumbs start-->
         <div class="breadcrumbs">
           <div class="_container">
-            <ol class="breadcrumb breadcrumbs__list" itemscope itemtype="">
-              <li itemscope itemprop="itemListElement" itemtype="">
+            <ol class="breadcrumb breadcrumbs__list" itemscope>
+              <li itemscope itemprop="itemListElement">
                 <a class="breadcrumbs__item" href="main.html" itemprop="item">
                   <span itemprop="name">Главная</span>
                 </a>
                 <meta itemprop="position" content="1" />
               </li>
-              <li itemscope itemprop="itemListElement" itemtype="">
+              <li itemscope itemprop="itemListElement">
                 <a class="breadcrumbs__item breadcrumbs__item_active" href="services.html" itemprop="item">
                   <span itemprop="name">Сервис</span>
                 </a>
@@ -400,7 +400,7 @@
       </div>
 
       <div class="footer__column">
-        <h2 class="footer__title footer__title_empty"></h2>
+        <h2 class="footer__title footer__title_empty"> </h2>
         <ul class="footer__list">
           <li>
             <a href="#" class="footer__link">Новости med24.online</a>
@@ -443,7 +443,7 @@
       <div class="footer__info">
         <div class="footer__block">
           <a href="main.html" class="footer__logo">
-            <img data-src="img/logo.svg" src="" alt="">
+            <img data-src="img/logo.svg" alt="">
           </a>
           <div class="footer__block-text">
             <p class="footer__text">© 2015-2021, ООО «Семейный доктор» <a href="https://www.rusprofile.ru/id/7535774">ОГРН 1153668014390</a></p>
@@ -457,7 +457,7 @@
         <h3 class="footer__title">Мы в социальных сетях:</h3>
         <div class="footer__social">
           <a href="#" class="footer__icon">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="25" height="15" viewBox="0 0 21 12"><defs><path d="M1296.23383,9563.81725h1.19488c0,0 0.36072,-0.04013 0.54531,-0.24422c0.16949,-0.18746 0.16422,-0.53945 0.16422,-0.53945c0,0 -0.02357,-1.64875 0.72041,-1.89182c0.73368,-0.2402 1.67576,1.59371 2.67426,2.29712c0.75485,0.53429 1.32866,0.41677 1.32866,0.41677l2.66956,-0.03841c0,0 1.39652,-0.08828 0.73425,-1.21764c-0.05413,-0.09115 -0.38567,-0.83527 -1.98509,-2.36133c-1.67416,-1.59772 -1.44951,-1.33975 0.56671,-4.10352c1.22818,-1.68429 1.71902,-2.7116 1.56567,-3.15131c-0.14626,-0.41849 -1.04942,-0.30842 -1.04942,-0.30842l-3.00579,0.01949c0,0 -0.22305,-0.0321 -0.38818,0.06937c-0.16148,0.09918 -0.26527,0.33307 -0.26527,0.33307c0,0 -0.47585,1.30134 -1.11042,2.40891c-1.33839,2.33725 -1.87328,2.46165 -2.09221,2.31661c-0.50903,-0.33881 -0.38177,-1.35867 -0.38177,-2.08386c0,-2.26559 0.33417,-3.21035 -0.65071,-3.454c-0.3265,-0.08255 -0.56717,-0.13587 -1.40282,-0.14447c-1.07265,-0.01089 -1.9804,0.00287 -2.49401,0.26256c-0.34218,0.17256 -0.60596,0.55665 -0.4454,0.57729c0.1989,0.02752 0.64877,0.12497 0.88715,0.45977c0.30785,0.43168 0.29709,1.39822 0.29709,1.39822c0,0 0.17727,2.66689 -0.41325,2.99709c-0.40489,0.22816 -0.96073,-0.23619 -2.15401,-2.3556c-0.61146,-1.08693 -1.073,-2.28852 -1.073,-2.28852c0,0 -0.08904,-0.22415 -0.24776,-0.34454c-0.19249,-0.14561 -0.46188,-0.1909 -0.46188,-0.1909l-2.8561,0.01949c0,0 -0.42881,0.01204 -0.58628,0.20409c-0.14008,0.17084 -0.01122,0.5234 -0.01122,0.5234c0,0 2.23595,5.38078 4.76807,8.09238c2.32189,2.48516 4.95838,2.32235 4.95838,2.32235z" id="Path-0"/></defs><g transform="matrix(1,0,0,1,-1286,-9552)"><g><use xlink:href="#Path-0"fill-opacity="1"/></g></g></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="25" height="15" viewBox="0 0 21 12"><defs><path d="M1296.23383,9563.81725h1.19488c0,0 0.36072,-0.04013 0.54531,-0.24422c0.16949,-0.18746 0.16422,-0.53945 0.16422,-0.53945c0,0 -0.02357,-1.64875 0.72041,-1.89182c0.73368,-0.2402 1.67576,1.59371 2.67426,2.29712c0.75485,0.53429 1.32866,0.41677 1.32866,0.41677l2.66956,-0.03841c0,0 1.39652,-0.08828 0.73425,-1.21764c-0.05413,-0.09115 -0.38567,-0.83527 -1.98509,-2.36133c-1.67416,-1.59772 -1.44951,-1.33975 0.56671,-4.10352c1.22818,-1.68429 1.71902,-2.7116 1.56567,-3.15131c-0.14626,-0.41849 -1.04942,-0.30842 -1.04942,-0.30842l-3.00579,0.01949c0,0 -0.22305,-0.0321 -0.38818,0.06937c-0.16148,0.09918 -0.26527,0.33307 -0.26527,0.33307c0,0 -0.47585,1.30134 -1.11042,2.40891c-1.33839,2.33725 -1.87328,2.46165 -2.09221,2.31661c-0.50903,-0.33881 -0.38177,-1.35867 -0.38177,-2.08386c0,-2.26559 0.33417,-3.21035 -0.65071,-3.454c-0.3265,-0.08255 -0.56717,-0.13587 -1.40282,-0.14447c-1.07265,-0.01089 -1.9804,0.00287 -2.49401,0.26256c-0.34218,0.17256 -0.60596,0.55665 -0.4454,0.57729c0.1989,0.02752 0.64877,0.12497 0.88715,0.45977c0.30785,0.43168 0.29709,1.39822 0.29709,1.39822c0,0 0.17727,2.66689 -0.41325,2.99709c-0.40489,0.22816 -0.96073,-0.23619 -2.15401,-2.3556c-0.61146,-1.08693 -1.073,-2.28852 -1.073,-2.28852c0,0 -0.08904,-0.22415 -0.24776,-0.34454c-0.19249,-0.14561 -0.46188,-0.1909 -0.46188,-0.1909l-2.8561,0.01949c0,0 -0.42881,0.01204 -0.58628,0.20409c-0.14008,0.17084 -0.01122,0.5234 -0.01122,0.5234c0,0 2.23595,5.38078 4.76807,8.09238c2.32189,2.48516 4.95838,2.32235 4.95838,2.32235z" id="Path-0"/></defs><g transform="matrix(1,0,0,1,-1286,-9552)"><g><use xlink:href="#Path-0" fill-opacity="1"/></g></g></svg>
           </a>
           <a href="#" class="footer__icon">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 774 1000.2" width="20" height="30"><path d="M0 359c0-42 8.8-83.7 26.5-125s43-79.7 76-115 76.3-64 130-86S345.7 0 411 0c106 0 193 32.7 261 98s102 142.3 102 231c0 114-28.8 208.2-86.5 282.5S555.3 723 464 723c-30 0-58.2-7-84.5-21s-44.8-31-55.5-51l-40 158c-3.3 12.7-7.7 25.5-13 38.5S259.8 873 253.5 885c-6.3 12-12.7 23.3-19 34s-12.7 20.7-19 30-11.8 17.2-16.5 23.5-9 11.8-13 16.5l-6 8c-2 2.7-4.7 3.7-8 3s-5.3-2.7-6-6c0-.7-.5-5.3-1.5-14s-2-17.8-3-27.5-2-22.2-3-37.5-1.3-30.2-1-44.5 1.3-30.2 3-47.5 4.2-33.3 7.5-48c7.3-31.3 32-135.7 74-313-5.3-10.7-9.7-23.5-13-38.5s-5-27.2-5-36.5l-1-15c0-42.7 10.8-78.2 32.5-106.5S303.3 223 334 223c24.7 0 43.8 8.2 57.5 24.5S412 284.3 412 309c0 15.3-2.8 34.2-8.5 56.5s-13.2 48-22.5 77-16 52.5-20 70.5c-6.7 30-.8 56 17.5 78s42.8 33 73.5 33c52.7 0 96.2-29.8 130.5-89.5S634 402.7 634 318c0-64.7-21-117.5-63-158.5S470.3 98 395 98c-84 0-152.2 27-204.5 81S112 297.7 112 373c0 44.7 12.7 82.3 38 113 8.7 10 11.3 20.7 8 32-1.3 3.3-3.3 11-6 23s-4.7 19.7-6 23c-1.3 7.3-4.7 12.2-10 14.5s-11.3 2.2-18-.5c-39.3-16-68.8-43.5-88.5-82.5S0 411 0 359z"/></svg>
