--- a/about.html
+++ b/about.html
@@ -608,7 +608,7 @@
       </div>
 
       <div class="footer__column">
-        <h2 class="footer__title footer__title_empty"> </h2>
+        <h2 class="footer__title footer__title_empty">Title</h2>
         <ul class="footer__list">
           <li>
             <a href="#" class="footer__link">Новости med24.online</a>
@@ -651,7 +651,7 @@
       <div class="footer__info">
         <div class="footer__block">
           <a href="main.html" class="footer__logo">
-            <img data-src="img/logo.svg" alt="">
+            <img data-src="img/logo.svg" src="" alt="">
           </a>
           <div class="footer__block-text">
             <p class="footer__text">© 2015-2021, ООО «Семейный доктор» <a href="https://www.rusprofile.ru/id/7535774">ОГРН 1153668014390</a></p>
