--- a/articles.html
+++ b/articles.html
@@ -279,7 +279,7 @@
 								L22.079,17.835z"/>
 						</g>
 					</svg>
-					<span>Позвонить нам</span>
+					<span>Позвонить</span>
 				</a>
 			</div>
 
@@ -321,7 +321,7 @@
 							c3.653-15.022,22.955-27.851,43.357-29.46c6.951,11.05,21.071,18.337,36.689,18.337
 							C190.966,222.326,205.085,215.054,212.038,204.005z"/>
 					</svg>
-					<span>Обратная связь</span>
+					<span>Перезвоним</span>
 				</a>
 			</div>
 
@@ -340,7 +340,7 @@
 							<g><rect style="fill:#4a4742;" x="75.812" y="239.611" width="215.917" height="30.615"/></g>
 						</g>
 					</svg>
-					<span>Написать нам</span>
+					<span>Написать</span>
 				</div>
 				<div class="mobile-menu__socials">
 					<a href="viber://chat?number=%2B380660878871" class="mobile-menu__social">
