--- a/services.html
+++ b/services.html
@@ -536,6 +536,7 @@
                   <li><a href="#" class="article__link">Связаться med24.online</a></li>
                   <li><a href="#" class="article__link">IT-Безопасность</a></li>
                   <li><a href="#" class="article__link">О компании Семейный Доктор</a></li>
+                  <li><a href="#" class="article__link">Информация о сервисе компании Med24.Online</a></li>
                   <li><a href="#" class="article__link article__link_all">Посмотреть все</a></li>
                 </ul>
               </div>
@@ -543,10 +544,6 @@
                 <h2 class="_spoller" data-max="767.98"><span class="article__title-list">Новости</span><span class="article__icon"></span></h2>
                 <ul class="article__list">
                   <li><a href="#" class="article__link">Блог</a></li>
-                </ul>
-                <h2 class="_spoller" data-max="767.98"><span class="article__title-list">Сервис Med24.Online</span><span class="article__icon"></span></h2>
-                <ul class="article__list">
-                  <li><a href="#" class="article__link">Информации о сервисе компании Med24.Online</a></li>
                 </ul>
               </div>
               <div class="article__item">
