--- a/services.html
+++ b/services.html
@@ -404,7 +404,7 @@
 							</g>
 						</svg>
 					</div>
-					<a href="#" class="desctop-menu__link">Получить спецпредложение!</a>
+					<a href="#callback" class="desctop-menu__link _popup-link">Получить спецпредложение!</a>
 				</li>
 				<li>
 					<div class="desctop-menu__icon">
