--- a/services.html
+++ b/services.html
@@ -261,7 +261,9 @@
 						</a>
 					</div>
 					<div class="footer-menu__column">
-						<a href="#" class="footer-menu__link"></a>
+						<a href="https://www.med24.online/articles/contacts/" class="footer-menu__link">
+							<span>Контакты</span>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -269,7 +271,7 @@
 
 		<div class="mobile-menu">
 			<div class="mobile-menu__item">
-				<a href="tel:+380660878871" class="mobile-menu__link">
+				<a href="tel:+79618500942" class="mobile-menu__link">
 					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 25.625 25.625" style="enable-background:new 0 0 25.625 25.625;" xml:space="preserve">
 						<g>
 							<path style="fill:#4a4742;" d="M22.079,17.835c-1.548-1.324-3.119-2.126-4.648-0.804l-0.913,0.799
@@ -532,12 +534,12 @@
               <div class="article__item">
                 <h2 class="_spoller" data-max="767.98"><span class="article__title-list">О med24.online</span><span class="article__icon"></span></h2>
                 <ul class="article__list">
-                  <li><a href="about.html" class="article__link">О платформе med24.online</a></li>
-                  <li><a href="#" class="article__link">Связаться med24.online</a></li>
-                  <li><a href="#" class="article__link">IT-Безопасность</a></li>
-                  <li><a href="#" class="article__link">О компании Семейный Доктор</a></li>
+                  <li><a href="about.html#anchor1" class="article__link">О платформе med24.online</a></li>
+                  <li><a href="about.html#anchor2" class="article__link">Связаться med24.online</a></li>
+                  <li><a href="about.html#anchor3" class="article__link">IT-Безопасность</a></li>
+                  <li><a href="about.html#anchor4" class="article__link">О компании Семейный Доктор</a></li>
                   <li><a href="#" class="article__link">Информация о сервисе компании Med24.Online</a></li>
-                  <li><a href="#" class="article__link article__link_all">Посмотреть все</a></li>
+                  <li><a href="about.html#anchor1" class="article__link article__link_all">Посмотреть все</a></li>
                 </ul>
               </div>
               <div class="article__item">
@@ -564,7 +566,7 @@
         <ul class="footer__list">
           <li>
             <a href="#" class="footer__link">
-              <svg id="Lag_1" data-name="Lag 1" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+              <svg data-name="Lag 1" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
                 <g>
                   <path class="cls-1" d="M24.87,4H15.13A12.15,12.15,0,0,0,3,16.1v3.5a12.16,12.16,0,0,0,8.69,11.69l-.09,6.24a.51.51,0,0,0,.32.47h.18a.51.51,0,0,0,.38-.2l5.33-6.07h7.06A12.14,12.14,0,0,0,37,19.6V16.1A12.15,12.15,0,0,0,24.87,4ZM36,19.6A11.15,11.15,0,0,1,24.87,30.73H17.59a.5.5,0,0,0-.38.17l-4.59,5.22.08-5.26a.5.5,0,0,0-.37-.49A11.17,11.17,0,0,1,4,19.6V16.1A11.15,11.15,0,0,1,15.1,5h9.77A11.15,11.15,0,0,1,36,16.1Z"/>
                   <path class="cls-1" d="M29.65,14.83a1.13,1.13,0,0,0-.64-.2h-.08a.87.87,0,0,0-.31.1l-5.27,1.91V14.87a1,1,0,0,0-1-1H12a1,1,0,0,0-1,1v7.24a1,1,0,0,0,1,1H22.35a1,1,0,0,0,1-1V20.43l5.35,1.91H29a1.13,1.13,0,0,0,1.13-1.12V15.75A1.12,1.12,0,0,0,29.65,14.83Zm-7.3,7.28H12V14.87H22.35Zm6.78-.89c0,.07-.06.12-.17.15l-5.61-2V17.7L29,15.63h0a.14.14,0,0,1,.06.11Z"/>
@@ -616,25 +618,25 @@
         <h2 class="footer__title"><a href="#">О med24.online</a></h2>
         <ul class="footer__list">
           <li>
-            <a href="#" class="footer__link">IT безопасность</a>
+            <a href="about.html#anchor3" class="footer__link">IT безопасность</a>
           </li>
           <li>
-            <a href="#" class="footer__link">О компании</a>
+            <a href="about.html#anchor4" class="footer__link">О компании</a>
           </li>
           <li>
-            <a href="#" class="footer__link">О платформе</a>
+            <a href="about.html#anchor1" class="footer__link">О платформе</a>
           </li>
           <li>
-            <a href="#" class="footer__link">Связаться с нами</a>
+            <a href="about.html#anchor2" class="footer__link">Связаться с нами</a>
           </li>
           <li>
-            <a href="#" class="footer__link">Политика конфиденциальности</a>
+            <a href="privacy.html" class="footer__link">Политика конфиденциальности</a>
           </li>
           <li>
-            <a href="#" class="footer__link">Пользовательское соглашение</a>
+            <a href="policies.html" class="footer__link">Пользовательское соглашение</a>
           </li>
           <li>
-            <a href="#" class="footer__link">Политика использования файлов Cookie</a>
+            <a href="cookie-policies.html" class="footer__link">Политика использования файлов Cookie</a>
           </li>
         </ul>
       </div>
@@ -649,7 +651,7 @@
             <a href="#" class="footer__link">Клинические случаи</a>
           </li>
           <li>
-            <a href="#" class="footer__link">FAQ</a>
+            <a href="https://www.med24.online/faq/" class="footer__link">FAQ</a>
           </li>
         </ul>
       </div>
