--- a/privacy.html
+++ b/privacy.html
@@ -503,26 +503,26 @@
         <!--breadcrumbs start-->
         <div class="breadcrumbs">
           <div class="_container">
-            <ol class="breadcrumb breadcrumbs__list" itemscope>
-              <li itemscope itemprop="itemListElement">
+            <ol class="breadcrumb breadcrumbs__list" itemscope itemtype="https://schema.org/BreadcrumbList">
+              <li itemscope itemprop="itemListElement" itemtype="https://schema.org/ListItem">
                 <a class="breadcrumbs__item" href="main.html" itemprop="item">
                   <span itemprop="name">Главная</span>
                 </a>
                 <meta itemprop="position" content="1" />
               </li>
-              <li itemscope itemprop="itemListElement">
+              <li itemscope itemprop="itemListElement" itemtype="https://schema.org/ListItem">
                 <a class="breadcrumbs__item" href="services.html" itemprop="item">
                   <span itemprop="name">Сервис</span>
                 </a>
                 <meta itemprop="position" content="2" />
               </li>
-              <li itemscope itemprop="itemListElement">
+              <li itemscope itemprop="itemListElement" itemtype="https://schema.org/ListItem">
                 <a class="breadcrumbs__item" href="about.html" itemprop="item">
                   <span itemprop="name">О портале</span>
                 </a>
                 <meta itemprop="position" content="3" />
               </li>
-              <li itemscope itemprop="itemListElement">
+              <li itemscope itemprop="itemListElement" itemtype="https://schema.org/ListItem">
                 <a class="breadcrumbs__item breadcrumbs__item_active" href="privacy.html" itemprop="item">
                   <span itemprop="name">Политика конфиденциальности</span>
                 </a>
